[FIX] wikiactions icons need to be able to wrap in narrow displays.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@49277 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -394,10 +394,6 @@ tr.diffheader {
 	clear: both;
 }
 
-.wikiactions {
-	white-space: nowrap !important;
-}
-
 .split {
 	clear: both;
 }
